cmake_minimum_required(VERSION 3.5)

project(wektor LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(wektor0 vector0.cpp)
add_executable(wektor1 vector1.cpp)
add_executable(wektor2 vector2.cpp)
add_executable(wektor3 vector3.cpp)
add_executable(wektor4 vector4.cpp)
